monitoring/grafana/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-grafana
  namespace: monitoring
spec:
  selector:
    app: grafana
    tier: backend
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
